--- a/design.html
+++ b/design.html
@@ -11,18 +11,22 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "home-page-copy-copy-copy.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "design.css"], "outOfDate":[]};
 </script>
   
-  <title>Home Page copy copy copy</title>
+  <title>design</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=25744048"/>
-  <link rel="stylesheet" type="text/css" href="css/home-page-copy-copy-copy.css?crc=4193191577" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3825404808"/>
+  <link rel="stylesheet" type="text/css" href="css/design.css?crc=403709175" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="0" data-content-below-spacer="500" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="clearfix colelem" id="u210-4"><!-- content -->
+    <p>Sophia Boss</p>
+   </div>
+   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="62" data-content-below-spacer="438" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
