--- a/resume.html
+++ b/resume.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "about.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "resume.css"], "outOfDate":[]};
 </script>
   
-  <title>About </title>
+  <title>resume</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=25744048"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3825404808"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=403709175" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/resume.css?crc=403709175" id="pagesheet"/>
    </head>
  <body>
 
