--- a/2d.html
+++ b/2d.html
@@ -28,9 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
-     <div class="clip_frame grpelem" id="u1694"><!-- image -->
-      <img class="block" id="u1694_img" src="images/sophiaboss.png?crc=233982363" data-hidpi-src="images/sophiaboss_2x.png?crc=381025838" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/>
-     </div>
+     <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" data-hidpi-src="images/sophiaboss_2x.png?crc=381025838" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
      <div class="clip_frame grpelem" id="u641"><!-- image -->
       <img class="block" id="u641_img" src="images/purple_tree_cropped.jpg?crc=364062302" data-hidpi-src="images/purple_tree_cropped_2x.jpg?crc=231465062" alt="" data-heightwidthratio="0.9772151898734177" data-image-width="395" data-image-height="386"/>
      </div>
