--- a/home.html
+++ b/home.html
@@ -24,9 +24,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix borderbox" id="page"><!-- group -->
    <div class="clearfix grpelem" id="pu1694"><!-- column -->
-    <div class="clip_frame colelem" id="u1694"><!-- image -->
-     <img class="block" id="u1694_img" src="images/sophiaboss.png?crc=233982363" data-hidpi-src="images/sophiaboss_2x.png?crc=381025838" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/>
-    </div>
+    <a class="nonblock nontext clip_frame colelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" data-hidpi-src="images/sophiaboss_2x.png?crc=381025838" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
     <a class="nonblock nontext museBGSize colelem" id="u1617" href="work.html"><!-- simple frame --></a>
     <a class="nonblock nontext museBGSize colelem" id="u1652" href="links.html"><!-- simple frame --></a>
    </div>
