--- a/links.html
+++ b/links.html
@@ -177,9 +177,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 		
    </div>
    <div class="clearfix grpelem" id="pu1694"><!-- column -->
-    <div class="clip_frame colelem" id="u1694"><!-- image -->
-     <img class="block" id="u1694_img" src="images/sophiaboss.png?crc=233982363" data-hidpi-src="images/sophiaboss_2x.png?crc=381025838" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/>
-    </div>
+    <a class="nonblock nontext clip_frame colelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" data-hidpi-src="images/sophiaboss_2x.png?crc=381025838" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
     <a class="nonblock nontext grow clip_frame colelem" id="u1578" href="https://qi.ucsd.edu/research-services/visualization.php"><!-- image --><img class="block" id="u1578_img" src="images/color-logo-01_2x.png?crc=4146615316" alt="" data-heightwidthratio="0.38114754098360654" data-image-width="244" data-image-height="93"/></a>
     <a class="nonblock nontext grow clip_frame colelem" id="u1588" href="https://www.youtube.com/watch?v=rHJcJqsj1Wc"><!-- image --><img class="block" id="u1588_img" src="images/txrlogo.png?crc=535545514" alt="" data-heightwidthratio="1" data-image-width="146" data-image-height="146"/></a>
    </div>
