--- a/2d.html
+++ b/2d.html
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
-     <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" data-hidpi-src="images/sophiaboss_2x.png?crc=381025838" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
      <div class="clip_frame grpelem" id="u641"><!-- image -->
       <img class="block" id="u641_img" src="images/purple_tree_cropped.jpg?crc=364062302" data-hidpi-src="images/purple_tree_cropped_2x.jpg?crc=231465062" alt="" data-heightwidthratio="0.9772151898734177" data-image-width="395" data-image-height="386"/>
      </div>
@@ -77,7 +77,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="block" id="u1380_img" src="images/img_0104.png?crc=31012119" data-hidpi-src="images/img_0104_2x.png?crc=3952541031" alt="" data-heightwidthratio="0.7515274949083504" data-image-width="491" data-image-height="369"/>
      </div>
      <div class="clip_frame grpelem" id="u1390"><!-- image -->
-      <img class="block" id="u1390_img" src="images/blender_finished.jpg?crc=3995767155" data-hidpi-src="images/blender_finished_2x.jpg?crc=3999059109" alt="" data-heightwidthratio="1.3461538461538463" data-image-width="286" data-image-height="385"/>
+      <img class="block" id="u1390_img" src="images/blender_finished2.jpg?crc=3995767155" data-hidpi-src="images/blender_finished_2x.jpg?crc=3999059109" alt="" data-heightwidthratio="1.3461538461538463" data-image-width="286" data-image-height="385"/>
      </div>
     </div>
    </div>
