--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>entry</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4087670949" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4251390174" id="pagesheet"/>
     <!--HTML Widget code-->
   
     <style>
@@ -250,6 +250,9 @@ Your browser does not support the video tag.
       <div class="clearfix" id="u144-4"><!-- content -->
        <p>Welcome to my website.</p>
       </div>
+     </div>
+     <div class="clip_frame grpelem" id="u1779"><!-- image -->
+      <img class="block" id="u1779_img" src="images/blender_finished.jpg?crc=33509957" alt="" data-heightwidthratio="1.3524229074889869" data-image-width="227" data-image-height="307"/>
      </div>
     </div>
    </div>
