--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
    <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
    <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
-   <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" data-hidpi-src="images/sophiaboss_2x.png?crc=381025838" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
+   <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
    <div class="clip_frame grpelem" id="u1466"><!-- image -->
     <img class="block" id="u1466_img" src="images/bliztern%20resume%205.jpg?crc=279859317" data-hidpi-src="images/bliztern%20resume%205_2x.jpg?crc=3762037400" alt="" data-heightwidthratio="1.2940275650842266" data-image-width="653" data-image-height="845"/>
    </div>
