--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" data-hidpi-src="images/sophiaboss_2x.png?crc=381025838" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
+   <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
    <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
    <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
    <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
