--- a/let-s-connect.html
+++ b/let-s-connect.html
@@ -25,7 +25,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="clearfix borderbox" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
     <div class="clearfix colelem" id="pu1694"><!-- group -->
-     <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" data-hidpi-src="images/sophiaboss_2x.png?crc=381025838" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
      <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
@@ -34,9 +34,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix grpelem" id="u1721-4"><!-- content -->
       <p>Email: sboss@ucsd.edu</p>
      </div>
-     <a class="nonblock nontext grow clip_frame grpelem" id="u1724" href="https://www.instagram.com/purplecat._/" target="_blank"><!-- image --><img class="block" id="u1724_img" src="images/ig-logo-email.png?crc=531781757" data-hidpi-src="images/ig-logo-email_2x.png?crc=4040217067" alt="" data-heightwidthratio="1" data-image-width="124" data-image-height="124"/></a>
+     <a class="nonblock nontext grow clip_frame grpelem" id="u1724" href="https://www.instagram.com/purplecat._/" target="_blank"><!-- image --><img class="block" id="u1724_img" src="images/ig-logo-email.png?crc=531781757" alt="" data-heightwidthratio="1" data-image-width="124" data-image-height="124"/></a>
      <a class="nonblock nontext grow clip_frame grpelem" id="u1734" href="https://www.linkedin.com/in/sophia-boss-31a830194/" target="_blank"><!-- image --><img class="block" id="u1734_img" src="images/linkedin.jpg?crc=281993763" alt="" data-heightwidthratio="1" data-image-width="121" data-image-height="121"/></a>
-     <a class="nonblock nontext grow clip_frame grpelem" id="u1744" href="https://www.facebook.com/profile.php?id=100004572377674" target="_blank"><!-- image --><img class="block" id="u1744_img" src="images/facebook-logo.png?crc=191460715" data-hidpi-src="images/facebook-logo_2x.png?crc=3908990117" alt="" data-heightwidthratio="1" data-image-width="202" data-image-height="202"/></a>
+     <a class="nonblock nontext grow clip_frame grpelem" id="u1744" href="https://www.facebook.com/profile.php?id=100004572377674" target="_blank"><!-- image --><img class="block" id="u1744_img" src="images/facebook-logo.png?crc=191460715" alt="" data-heightwidthratio="1" data-image-width="202" data-image-height="202"/></a>
     </div>
     <div class="verticalspacer" data-offset-top="392" data-content-above-spacer="391" data-content-below-spacer="108" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
