blender image test

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Your browser does not support the video tag.
       </div>
      </div>
      <div class="clip_frame grpelem" id="u1779"><!-- image -->
-      <img class="block" id="u1779_img" src="images/blender_finished.jpg?crc=33509957" alt="" data-heightwidthratio="1.3524229074889869" data-image-width="227" data-image-height="307"/>
+      <img class="block" id="u1779_img" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/blender_finished.jpg" alt="" data-heightwidthratio="1.3524229074889869" data-image-width="227" data-image-height="307"/>
      </div>
     </div>
    </div>
