--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       
 
 <video id="video_background"   muted loop  autoplay>
-    <source src="assets/blurvideoedit.mp4" type="video/mp4">
+    <source src="images/blurvideoedit.mp4" type="video/mp4">
     <source src="Add File" type="video/ogg">
     <source src="Add File" type="video/webm">
 Your browser does not support the video tag.
