--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ Your browser does not support the video tag.
     </div>
     <div class="grpelem" id="u389"><!-- simple frame --></div>
     <div class="scrollgroup clip_frame grpelem" id="u559"><!-- image -->
-     <img class="block" id="u559_img" src="images/black%20fade.png?crc=83662889" data-hidpi-src="images/black%20fade_2x.png?crc=482644972" alt="" data-heightwidthratio="1.2727272727272727" data-image-width="1012" data-image-height="1288"/>
+     <img class="block" id="u559_img" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/black%20fade.png" data-hidpi-src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/black%20fade.png" alt="" data-heightwidthratio="1.2727272727272727" data-image-width="1012" data-image-height="1288"/>
     </div>
     <a class="nonblock nontext scrollgroup clearfix grpelem" id="u549-4" href="links.html"><!-- content --><p>links</p></a>
     <a class="nonblock nontext clearfix grpelem" id="u614-4" href="critique-page.html"><!-- content --><p>critique page</p></a>
