--- a/links.html
+++ b/links.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Links</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4170048256"/>
-  <link rel="stylesheet" type="text/css" href="css/links.css?crc=4207050797" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3770011903"/>
+  <link rel="stylesheet" type="text/css" href="css/links.css?crc=322550768" id="pagesheet"/>
     <!--HTML Widget code-->
   <headHTML>
   <style>.fade
@@ -176,24 +176,35 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     
 		
    </div>
-   <div class="clearfix grpelem" id="pu1694"><!-- column -->
-    <a class="nonblock nontext clip_frame colelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
-    <a class="nonblock nontext grow clip_frame colelem" id="u1578" href="https://qi.ucsd.edu/research-services/visualization.php"><!-- image --><img class="block" id="u1578_img" src="images/color-logo-01_2x.png?crc=4146615316" alt="" data-heightwidthratio="0.38114754098360654" data-image-width="244" data-image-height="93"/></a>
-    <a class="nonblock nontext grow clip_frame colelem" id="u1588" href="https://www.youtube.com/watch?v=rHJcJqsj1Wc"><!-- image --><img class="block" id="u1588_img" src="images/txrlogo.png?crc=535545514" alt="" data-heightwidthratio="1" data-image-width="146" data-image-height="146"/></a>
-   </div>
-   <div class="clearfix grpelem" id="ppu1685-4"><!-- column -->
-    <div class="clearfix colelem" id="pu1685-4"><!-- group -->
-     <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
+   <div class="clearfix grpelem" id="ppu1937"><!-- column -->
+    <div class="clearfix colelem" id="pu1937"><!-- group -->
+     <div class="browser_width grpelem" id="u1937-bw">
+      <div id="u1937"><!-- group -->
+       <div class="clearfix" id="u1937_align_to_page">
+        <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="images/sb_icon.gif?crc=4191900242" data-hidpi-src="images/sb_icon_2x.gif?crc=4191900242" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
+        <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
+        <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
+        <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
+       </div>
+      </div>
+     </div>
+     <div class="browser_width grpelem" id="u1953-bw">
+      <div id="u1953"><!-- simple frame --></div>
+     </div>
     </div>
-    <div class="clearfix colelem" id="u529-4"><!-- content -->
-     <p>The immersive visualization lab is a space located at UC San Diego that is dedicated to the development of augmented reality and virtual reality projects. Individuals who work at IVL receive funding through various companies to develop immersive applications. IVL is partnered with Qualcomm Institute recieving expanded support.</p>
+    <div class="clearfix colelem" id="pu1578"><!-- group -->
+     <a class="nonblock nontext grow clip_frame grpelem" id="u1578" href="https://qi.ucsd.edu/research-services/visualization.php"><!-- image --><img class="block" id="u1578_img" src="images/color-logo-01_2x.png?crc=4146615316" alt="" data-heightwidthratio="0.38114754098360654" data-image-width="244" data-image-height="93"/></a>
+     <div class="clearfix grpelem" id="u529-4"><!-- content -->
+      <p>The immersive visualization lab is a space located at UC San Diego that is dedicated to the development of augmented reality and virtual reality projects. Individuals who work at IVL receive funding through various companies to develop immersive applications. IVL is partnered with Qualcomm Institute recieving expanded support.</p>
+     </div>
     </div>
-    <div class="clearfix colelem" id="u535-6"><!-- content -->
-     <p>Triton XR is an award-winning professional and social organization at UC San Diego, one of the largest and most successful XR student organizations in the nation, and the best resource for undergraduate students to engage with XR technology in San Diego. The organization holds numerous events including Hackathons, large-scale XR demos, workshops, project showcases, socials, and collaborations with other student organizations and departments on campus.</p>
-     <p>&nbsp;</p>
-     <p>&nbsp;</p>
+    <div class="clearfix colelem" id="pu1588"><!-- group -->
+     <a class="nonblock nontext grow clip_frame grpelem" id="u1588" href="https://www.youtube.com/watch?v=rHJcJqsj1Wc"><!-- image --><img class="block" id="u1588_img" src="images/txrlogo.png?crc=535545514" alt="" data-heightwidthratio="1" data-image-width="146" data-image-height="146"/></a>
+     <div class="clearfix grpelem" id="u535-6"><!-- content -->
+      <p>Triton XR is an award-winning professional and social organization at UC San Diego, one of the largest and most successful XR student organizations in the nation, and the best resource for undergraduate students to engage with XR technology in San Diego. The organization holds numerous events including Hackathons, large-scale XR demos, workshops, project showcases, socials, and collaborations with other student organizations and departments on campus.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+     </div>
     </div>
    </div>
    <div class="verticalspacer" data-offset-top="453" data-content-above-spacer="453" data-content-below-spacer="493" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
@@ -214,6 +225,8 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.browser_width');/* resize height */
+Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
