--- a/3d.html
+++ b/3d.html
@@ -17,18 +17,27 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>3d</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4170048256"/>
-  <link rel="stylesheet" type="text/css" href="css/3d.css?crc=3876271047" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3770011903"/>
+  <link rel="stylesheet" type="text/css" href="css/3d.css?crc=3829312158" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
-    <div class="clearfix colelem" id="pu1694"><!-- group -->
-     <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
-     <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
+    <div class="clearfix colelem" id="pu1937"><!-- group -->
+     <div class="browser_width grpelem" id="u1937-bw">
+      <div id="u1937"><!-- group -->
+       <div class="clearfix" id="u1937_align_to_page">
+        <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="images/sb_icon.gif?crc=4191900242" data-hidpi-src="images/sb_icon_2x.gif?crc=4191900242" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
+        <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
+        <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
+        <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
+       </div>
+      </div>
+     </div>
+     <div class="browser_width grpelem" id="u1953-bw">
+      <div id="u1953"><!-- simple frame --></div>
+     </div>
     </div>
     <div class="colelem" id="u1060"><!-- custom html -->
      <iframe width="560" height="315" src="https://www.youtube.com/embed/UrqhBhY12Qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -76,6 +85,8 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.browser_width');/* resize height */
+Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
