--- a/work.html
+++ b/work.html
@@ -17,25 +17,34 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Work</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4170048256"/>
-  <link rel="stylesheet" type="text/css" href="css/work.css?crc=3931465682" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3770011903"/>
+  <link rel="stylesheet" type="text/css" href="css/work.css?crc=332177398" id="pagesheet"/>
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- group -->
-   <a class="nonblock nontext clip_frame grpelem" id="u1694" href="index.html"><!-- image --><img class="block" id="u1694_img" src="images/sophiaboss.png?crc=3824372476" alt="" data-heightwidthratio="0.555956678700361" data-image-width="277" data-image-height="154"/></a>
-   <div class="clearfix grpelem" id="ppu1685-4"><!-- column -->
-    <div class="clearfix colelem" id="pu1685-4"><!-- group -->
-     <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
-     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
+  <div class="clearfix borderbox" id="page"><!-- column -->
+   <div class="position_content" id="page_position_content">
+    <div class="clearfix colelem" id="pu1937"><!-- group -->
+     <div class="browser_width grpelem" id="u1937-bw">
+      <div id="u1937"><!-- group -->
+       <div class="clearfix" id="u1937_align_to_page">
+        <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="images/sb_icon.gif?crc=4191900242" data-hidpi-src="images/sb_icon_2x.gif?crc=4191900242" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
+        <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
+        <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
+        <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
+       </div>
+      </div>
+     </div>
+     <div class="browser_width grpelem" id="u1953-bw">
+      <div id="u1953"><!-- simple frame --></div>
+     </div>
     </div>
     <a class="nonblock nontext clearfix colelem" id="u1669-4" href="2d.html"><!-- content --><p>2D Art</p></a>
     <a class="nonblock nontext clearfix colelem" id="u1673-4" href="3d.html"><!-- content --><p>3D Art</p></a>
     <a class="nonblock nontext clearfix colelem" id="u1676-4" href="design.html"><!-- content --><p>Design</p></a>
     <a class="nonblock nontext clearfix colelem" id="u1679-4" href="projects.html"><!-- content --><p>Projects</p></a>
+    <div class="verticalspacer" data-offset-top="540" data-content-above-spacer="540" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
-   <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
-   <div class="verticalspacer" data-offset-top="540" data-content-above-spacer="540" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -53,6 +62,8 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.browser_width');/* resize height */
+Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
