--- a/2d.html
+++ b/2d.html
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="browser_width grpelem" id="u1937-bw">
       <div id="u1937"><!-- group -->
        <div class="clearfix" id="u1937_align_to_page">
-        <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="images/sb_icon.gif?crc=4191900242" data-hidpi-src="images/sb_icon_2x.gif?crc=4191900242" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
+        <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/sb_icon.gif" data-hidpi-src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/sb_icon.gif" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
         <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
         <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
         <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
@@ -42,19 +42,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix colelem" id="ppu641"><!-- group -->
      <div class="clearfix grpelem" id="pu641"><!-- column -->
       <div class="clip_frame colelem" id="u641"><!-- image -->
-       <img class="block" id="u641_img" src="images/purple_tree_cropped.jpg?crc=364062302" data-hidpi-src="images/purple_tree_cropped_2x.jpg?crc=231465062" alt="" data-heightwidthratio="0.9772151898734177" data-image-width="395" data-image-height="386"/>
+       <img class="block" id="u641_img" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/purple_tree_cropped.jpg" data-hidpi-src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/purple_tree_cropped.jpg" alt="" data-heightwidthratio="0.9772151898734177" data-image-width="395" data-image-height="386"/>
       </div>
       <div class="clip_frame colelem" id="u671"><!-- image -->
-       <img class="block" id="u671_img" src="images/drip%20girl.jpg?crc=206176624" data-hidpi-src="images/drip%20girl_2x.jpg?crc=122943597" alt="" data-heightwidthratio="1.3341772151898734" data-image-width="395" data-image-height="527"/>
+       <img class="block" id="u671_img" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/drip%20girl.jpg" data-hidpi-src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/drip%20girl.jpg" alt="" data-heightwidthratio="1.3341772151898734" data-image-width="395" data-image-height="527"/>
       </div>
       <div class="clip_frame colelem" id="u693"><!-- image -->
-       <img class="block" id="u693_img" src="images/mountain_poster_final_merged_1.jpg?crc=4187933315" data-hidpi-src="images/mountain_poster_final_merged_1_2x.jpg?crc=3951581017" alt="" data-heightwidthratio="1.6799007444168734" data-image-width="403" data-image-height="677"/>
+       <img class="block" id="u693_img" src="https://github.com/sophiaboss11/sophiaboss11.github.io/blob/master/images/mountain_poster_final_merged_1.jpg" data-hidpi-src="https://github.com/sophiaboss11/sophiaboss11.github.io/blob/master/images/mountain_poster_final_merged_1.jpg" alt="" data-heightwidthratio="1.6799007444168734" data-image-width="403" data-image-height="677"/>
       </div>
       <div class="clip_frame colelem" id="u713"><!-- image -->
        <img class="block" id="u713_img" src="images/exhibition_poster_2_1.jpg?crc=3781136672" data-hidpi-src="images/exhibition_poster_2_1_2x.jpg?crc=133316486" alt="" data-heightwidthratio="1.3325062034739454" data-image-width="403" data-image-height="537"/>
       </div>
       <div class="clip_frame colelem" id="u739"><!-- image -->
-       <img class="block" id="u739_img" src="images/charcoal%20drawing.jpg?crc=3930353741" data-hidpi-src="images/charcoal%20drawing_2x.jpg?crc=363616718" alt="" data-heightwidthratio="1" data-image-width="403" data-image-height="403"/>
+       <img class="block" id="u739_img" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/charcoal%20drawing.jpg" data-hidpi-src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/charcoal%20drawing.jpg" alt="" data-heightwidthratio="1" data-image-width="403" data-image-height="403"/>
       </div>
       <div class="clip_frame colelem" id="u759"><!-- image -->
        <img class="block" id="u759_img" src="images/scannable%20document%2018%20on%20jun%205%2c%202020%20at%205_04_41%20pm.jpg?crc=3953363929" data-hidpi-src="images/scannable%20document%2018%20on%20jun%205%2c%202020%20at%205_04_41%20pm_2x.jpg?crc=438251124" alt="" data-heightwidthratio="0.5637254901960784" data-image-width="408" data-image-height="230"/>
