--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="browser_width grpelem" id="u1937-bw">
     <div id="u1937"><!-- group -->
      <div class="clearfix" id="u1937_align_to_page">
-      <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="images/sb_icon.gif?crc=4191900242" data-hidpi-src="images/sb_icon_2x.gif?crc=4191900242" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
+      <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/sb_icon.gif" data-hidpi-src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/sb_icon.gif" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
       <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
       <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
