--- a/projects.html
+++ b/projects.html
@@ -49,8 +49,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/wastelandpsbuttoncombined-wasteland.jpg?crc=307861172" alt=""/>
-   <img class="preload" src="images/wastelandpsbuttoncombined-wasteland_2x.jpg?crc=19457830" alt=""/>
+   <img class="preload" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/wastelandpsbuttoncombined-layer%201.jpg" alt=""/>
+   <img class="preload" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/wastelandpsbuttoncombined-wasteland2.jpg" alt=""/>
    <img class="preload" src="images/bodylogical_button-down.jpg?crc=201064890" alt=""/>
    <img class="preload" src="images/bodylogical_button-down_2x.jpg?crc=4206710691" alt=""/>
    <img class="preload" src="images/wastelandpsbuttoncombined-wasteland2.jpg?crc=465767997" alt=""/>
